--- a/ios/HOlDER/Info.plist
+++ b/ios/HOlDER/Info.plist
@@ -49,7 +49,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<!-- 카메라 추가를 위해 -->
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>기능 결과 등록을 위해서 카메라 사용이 필요합니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>기능 등록 및 수정을 위해서 당신의 마이크가 필요합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>기능 결과 등록을 위해서 앨범 사용이 필요합니다.</string>
 </dict>
 </plist>
