--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,10 @@ target 'HOlDER' do
     # Pods for testing
   end
 
+  # setting for RN QR Scanner
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
